# bagofwords

./: .CHANGELOG.md.swp  .dockerignore  .gitignore  .snyk  AGENTS.md  CHANGELOG.md  Caddyfile  DEV.md  Dockerfile  Dockerfile-alpine  Dockerfile-bookworm  Dockerfile-old  LICENSE  OAUTH_PLAN.md  OPS.md  PLAN_MULTI_CONNECTION.md  PLAN_POWERBI.md  PLAN_QVD.md  PLAN_TABLEAU_WORKBOOKS.md  README.md  REPRO-viz-breakdown.md  SANDBOX_FEEDBACK_LOOP.md  SECURITY.md  SSO_OBO_DECK_PROMPT.md  bow-config.dev.yaml  bow-config.yaml  design-open-changes-review-center.md  docker-compose.dev.yaml  docker-compose.production.yml  docker-compose.yaml  index.yaml  plan.md  release_notes.md  report.html  report.txt  sandbox-feedback-loop-agent-manager-rbac.md  sandbox-feedback-loop-agents-connections-overflow.md  sandbox-feedback-loop-agents-instructions-perf.md  sandbox-feedback-loop-agents-page-contention.md  sandbox-feedback-loop-agents-ui.md  (+19 more)
backend/: .env.example  AGENTS.md  Dockerfile.optimized  app.db  diff  main.py  pyproject.toml  repro_dup_schedule.py  requirements_versioned.txt  seed_mobile_ui.py  seed_report_tools.py  test_azure_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 1576b701e34b_generate_completion_blocks_and_wire_to_.py  21952d7521e4_users_type.py  2c6238f56d1c_agent_execution_and_tools_data_models.py  34420bdfc530_add_completion_feedbacks_table.py  4607665ae190_drop_fk_on_agent_automation_runs_build_.py  4e6982618f6e_add_detected_project_types_to_metadata_.py  52735eef8bf7_merge_kind_and_eval_migration_heads.py  569d24b5f050_instructions_more_configs.py  6a23ec61f1d9_mentions_new_types.py  6d171618ced8_merge_prompt_notifications_heads.py  7e96b24b33ad_unique_constaint_for_llms_and_data_.py  8c1061a09336_table_stats_and_usage_metrics.py  8f06b9c7f785_organizations_and_memberships.py  95de3b2ebc88_add_catalog_entities.py  9e2b31aaa07e_instruction_labels.py  a1b2c3d4e5f6_add_rbac_tables.py  a1c2m0de9f01_add_modes_channels_to_instructions.py  a295ec7c4a5b_api_key.py  add_performance_indexes.py  agnt1focus01_add_report_focused_data_source_ids.py  art1f4c70001_add_investigation_artifacts.py  art1f4c70001_add_result_files.py  b1c2d3e4f5a6_add_attribution_to_llm_usage_records.py  b2c3d4e5f6g7_add_ldap_support.py  b8f3a2c91d4e_add_unified_instruction_fields.py  bd5c1a7e9f02_add_description_to_instructions.py  c1d2e3f4a5b6_add_prompt_runs.py  c1w2o3v4r5d6_add_context_window_override_to_llm_models.py  c2d3e4f5a6b7_add_service_accounts.py  c3f1a9b2d4e7_add_is_restricted_to_llm_models.py  c4a1d2e3f4b5_add_channel_availability_to_data_sources.py  c5d6e7f8a9b0_add_data_source_file_association.py  c5d6e7f8a9b0_eval_tools_status_provenance_is_eval_run.py  ca84ec3273b7_add_visualization_model.py  cn1prv2conn3_member_create_private_connector.py  connratelimit01_add_connection_rate_limit.py  ctxcomp01_add_report_context_states.py  d4e5f6a7b8c9_instruction_file_architecture.py  d6e7f8a9b0c1_add_events_json.py  da68823779da_add_test_models.py  (+56 more)
backend/app/: dependencies.py  project_manager.py  websocket_manager.py
backend/app/ai/: agent.py  agent_v2.py  embeddings.py  instruction_quality.py  model_router.py  prompt_formatters.py  prompt_language.py  registry.py
backend/app/core/: auth.py  base_url.py  cors.py  dbt_parser.py  derived_access.py  file_tokens.py  git_file_walker.py  hybrid_ranking.py  lookml_parser.py  markdown_parser.py  otel.py  permission_resolver.py  permissions_decorator.py  permissions_registry.py  scheduler.py  seats.py  spa.py  telemetry.py
backend/app/data_sources/: kerberos.py
backend/app/ee/: __init__.py  license.py  routes.py
backend/app/enterprise/: __init__.py  routes.py
backend/app/errors/: codes.py
backend/app/middleware/: error_handler.py  performance_monitor.py  security.py  validation.py
backend/app/models/: agent_automation_run.py  agent_execution.py  api_key.py  artifact.py  build_content.py  completion.py  completion_block.py  completion_feedback.py  connection.py  connection_indexing.py  connection_rate_limit_counter.py  connection_table.py  data_source.py  data_source_connection_tool.py  datasource_table.py  dbt_resource.py  entity.py  eval.py  execution_log.py  external_platform.py  external_user_mapping.py  file.py  file_reference.py  git_repository.py  group_membership.py  instruction.py  instruction_build.py  instruction_label.py  instruction_reference.py  instruction_version.py  investigation_artifact.py  llm_model.py  llm_provider.py  llm_usage_record.py  membership.py  memory.py  mention.py  note.py  (+33 more)
backend/demo-datasources/: chinook.sqlite
backend/docs/: sandbox-feedback-loop.md
backend/email_sandbox/: README.md  check_mailbox.py  conftest.py  connect_microsoft.py  test_email_adapter.py  test_email_oauth.py  test_email_poller.py  test_email_resolver.py  test_email_sandbox_loop.py  test_email_security.py
backend/evals/: PLAN.md
backend/loadtest/: FINDINGS.md  harness.py  run.sh  sample_metrics.sh  setup_llm.sh
backend/scripts/: artifact_store_e2e.py  bench_diagnosis_endpoints.py  bench_instruction_context.py  bench_network_dir_indexing.py  bench_pending_sweep.py  bench_perf.py  clarify_status_feedback_loop.py  cleanup_demo_review.py  concurrency_bench.py  download_embedding_model.py  gen_chinook_1000x.py  gen_network_dir_fixtures.py  gen_sandbox_license.py  gen_session_event_samples.py  insert_events_report.py  loop_d_live_anthropic.py  mock_webhook.py  network_dir_live_agent.py  profile_agents_page.py  profile_diagnosis_perf.py  profile_pending_changes.py  profile_pending_prodshape.py  profile_reports_list.py  profile_show_all.py  profile_text_hunks_optimization.py  pw_artifact_perf_repro.js  pw_nav_bench.js  pw_page_audit.js  pw_viz_inflation_repro.js  random_agent_eval.py  repro_bigquery_db_dtypes.py  repro_edit_artifact_viz_inflation_live.py  repro_hunks.py  reset_password.py  result_store_e2e.py  run_haiku_title_completion.py  sandbox_smoke.py  scale_hunks.py  scenario_versioning.py  screenshot_roles_editor.py  (+39 more)
backend/tests/: AGENTS.md  conftest.py  test_base.py  test_clients.py  test_example.py
(+1922 files in other folders)
