[project]
name = "bagofwords"
version = "0.1.0"
description = "Bag of Words — AI data tool backend"
authors = []
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.123.1,<0.124",
    "uvicorn[standard]>=0.31.1,<0.32",
    "starlette>=0.50.0",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.27,<0.1",
    "email-validator>=2.1.2,<3",
    "jinja2>=3.1.6,<4",
    "fastapi-users[sqlalchemy]>=15.0.5,<16",
    "argon2-cffi>=23.1.0,<24",
    "bcrypt>=4.1.2,<5",
    "pwdlib[argon2]>=0.3.0,<0.4",
    "pyjwt>=2.13,<3",
    "httpx-oauth>=0.16.1,<0.17",
    "cryptography>=46.0,<47",
    "sqlalchemy>=2.0.29,<3",
    "alembic>=1.13.1,<2",
    "asyncpg>=0.29.0,<0.30",
    "psycopg2-binary>=2.9.9,<3",
    "aiosqlite>=0.20.0,<0.21",
    "pymysql>=1.1.1,<2",
    "httpx>=0.28.1,<0.29",
    "requests>=2.33,<3",
    "requests-ntlm>=1.3.0,<2",
    "requests-oauthlib>=2.0,<3",
    "curl-cffi>=0.15,<0.16",
    "selectolax>=0.4.9,<0.5",
    "anthropic>=0.40.0,<0.41",
    "openai>=1.107,<2",
    "google-generativeai>=0.8.3,<0.9",
    "google-genai>=1.36,<2",
    "google-api-python-client>=2.154,<3",
    "google-auth>=2.36,<3",
    "mcp>=1.26,<2",
    "clickhouse-connect>=0.8.7,<0.9",
    "snowflake-connector-python>=4.5.0,<5",
    "snowflake-sqlalchemy>=1.9.0,<2",
    "google-cloud-bigquery>=3.27,<4",
    "boto3>=1.37,<2",
    "awswrangler>=3.11,<4",
    "azure-kusto-data>=4.6.2,<5",
    "azure-identity>=1.19,<2",
    "databricks-sql-connector>=4.2.6,<5",
    "duckdb>=1.4.2,<2",
    "pymongo>=4.10.1,<5",
    "pyodbc>=5.3.0,<6",
    "oracledb>=3.4.0,<4",
    "vertica-python>=1.4.0,<2",
    "verticapy>=1.1.1,<2",
    "trino>=0.337,<1",
    "pinotdb>=5.7,<6",
    "pydruid>=0.6.9,<0.7",
    "teradatasql>=20.0.0,<21",
    "simple-salesforce>=1.12.6,<2",
    "ldap3>=2.9.1,<3",
    "lkml>=1.3.7,<2",
    "pbixray>=0.5.2,<0.6",
    "pyarrow>=18.1,<19",
    "pandas>=2.2.2,<3",
    "numpy>=1.26.4,<2",
    "matplotlib>=3.10,<4",
    "pillow>=12.2,<13",
    "openpyxl>=3.1.5,<4",
    "xlrd>=2.0.1,<3",
    "xlsxwriter>=3.2,<4",
    "pypdf>=6.10,<7",
    "pdfminer-six>=20221105,<20230000",
    "python-pptx>=1.0.2,<2",
    "pdf2image>=1.17.0,<2",
    "lxml>=6.1,<7",
    "defusedxml>=0.7.1,<0.8",
    "aiofiles>=24.1,<25",
    "aiosmtplib>=2.0.2,<3",
    "apscheduler>=3.11,<4",
    "tenacity>=9.0,<10",
    "python-slugify>=8.0.4,<9",
    "python-dotenv>=1.2.2,<2",
    "pyyaml>=6.0.2,<7",
    "tiktoken>=0.8,<1",
    "rapidfuzz>=3.10,<4",
    "partialjson>=0.0.8,<0.1",
    "pathspec>=1.0.4,<2",
    "gitpython>=3.1.50,<4",
    "ipython>=8.22.2,<9",
    "fastapi-mail>=1.4.0,<2",
    "posthog>=6.7,<7",
    "stripe>=11.4,<12",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.29,<2",
    "playwright>=1.60,<2",
    "playwright-stealth>=2.0.3,<3",
    "pyspark[connect]>=3.5.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=0.23.6,<0.24",
    "pytest-timeout>=2.3,<3",
    "testcontainers[postgres,mysql]>=4.13.3,<5",
    "aiosmtpd>=1.4.6,<2",
    "ruff>=0.15.18,<0.16",
    "ty>=0.0.50,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI deps)
    "B904",  # raise from inside except (noisy in legacy code)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]
python-version = "3.12"
