[project]
name = "bagofwords"
version = "0.1.0"
description = "Bag of Words — AI data tool backend"
authors = []
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.123.1,<0.124",
    "uvicorn[standard]>=0.31.1,<0.32",
    "starlette>=0.50.0,<0.51",
    "pydantic>=2.11,<2.12",
    "pydantic-settings>=2.7,<2.8",
    "python-multipart>=0.0.27,<0.1",
    "email-validator>=2.1.2,<2.2",
    "jinja2>=3.1.6,<3.2",
    "fastapi-users[sqlalchemy]>=15.0.5,<15.1",
    "argon2-cffi>=23.1.0,<23.2",
    "bcrypt>=4.1.2,<4.2",
    "pwdlib[argon2]>=0.3.0,<0.4",
    "pyjwt>=2.13,<2.14",
    "httpx-oauth>=0.16.1,<0.17",
    "cryptography>=46.0,<46.1",
    "sqlalchemy>=2.0.29,<2.1",
    "alembic>=1.13.1,<1.14",
    "asyncpg>=0.29.0,<0.30",
    "psycopg2-binary>=2.9.9,<2.10",
    "aiosqlite>=0.20.0,<0.21",
    "pymysql>=1.1.1,<1.2",
    "httpx>=0.28.1,<0.29",
    "requests>=2.33,<2.34",
    "requests-ntlm>=1.3.0,<1.4",
    "requests-oauthlib>=2.0,<2.1",
    "curl-cffi>=0.15,<0.16",
    "selectolax>=0.4.9,<0.5",
    "anthropic>=0.40.0,<0.41",
    "openai>=1.107,<1.108",
    "google-generativeai>=0.8.3,<0.9",
    "google-genai>=1.36,<1.37",
    "google-api-python-client>=2.154,<2.155",
    "google-auth>=2.36,<2.37",
    "mcp>=1.26,<1.27",
    "clickhouse-connect>=0.8.7,<0.9",
    "snowflake-connector-python>=4.5.0,<4.6",
    "snowflake-sqlalchemy>=1.9.0,<1.10",
    "google-cloud-bigquery>=3.27,<3.28",
    "boto3>=1.37,<1.38",
    "awswrangler>=3.11,<3.12",
    "azure-kusto-data>=4.6.2,<4.7",
    "azure-identity>=1.19,<1.20",
    "databricks-sql-connector>=4.2.6,<4.3",
    "duckdb>=1.4.2,<1.5",
    "pymongo>=4.10.1,<4.11",
    "pyodbc>=5.3.0,<5.4",
    "oracledb>=3.4.0,<3.5",
    "vertica-python>=1.4.0,<1.5",
    "verticapy>=1.1.1,<1.2",
    "trino>=0.337,<0.338",
    "pinotdb>=5.7,<5.8",
    "pydruid>=0.6.9,<0.7",
    "teradatasql>=20.0.0,<20.1",
    "simple-salesforce>=1.12.6,<1.13",
    "ldap3>=2.9.1,<2.10",
    "lkml>=1.3.7,<1.4",
    "pbixray>=0.5.2,<0.6",
    "pyarrow>=18.1,<18.2",
    "pandas>=2.2.2,<2.3",
    "numpy>=1.26.4,<1.27",
    "matplotlib>=3.10,<3.11",
    "pillow>=12.2,<12.3",
    "openpyxl>=3.1.5,<3.2",
    "xlrd>=2.0.1,<2.1",
    "xlsxwriter>=3.2,<3.3",
    "pypdf>=6.10,<6.11",
    "pdfminer-six>=20221105,<20230000",
    "python-pptx>=1.0.2,<1.1",
    "pdf2image>=1.17.0,<1.18",
    "lxml>=6.1,<6.2",
    "defusedxml>=0.7.1,<0.8",
    "aiofiles>=24.1,<24.2",
    "aiosmtplib>=2.0.2,<2.1",
    "apscheduler>=3.11,<3.12",
    "tenacity>=9.0,<9.1",
    "python-slugify>=8.0.4,<8.1",
    "python-dotenv>=1.2.2,<1.3",
    "pyyaml>=6.0.2,<6.1",
    "tiktoken>=0.8,<0.9",
    "rapidfuzz>=3.10,<3.11",
    "partialjson>=0.0.8,<0.1",
    "pathspec>=1.0.4,<1.1",
    "gitpython>=3.1.50,<3.2",
    "ipython>=8.22.2,<8.23",
    "fastapi-mail>=1.4.0,<1.5",
    "posthog>=6.7,<6.8",
    "stripe>=11.4,<11.5",
    "opentelemetry-api>=1.29,<1.30",
    "opentelemetry-sdk>=1.29,<1.30",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<0.51",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0,<0.51",
    "opentelemetry-instrumentation-httpx>=0.50b0,<0.51",
    "opentelemetry-instrumentation-logging>=0.50b0,<0.51",
    "opentelemetry-exporter-otlp>=1.29,<1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29,<1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.29,<1.30",
    "playwright>=1.60,<1.61",
    "playwright-stealth>=2.0.3,<2.1",
    "pyspark[connect]>=3.5.3,<3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<8.2",
    "pytest-asyncio>=0.23.6,<0.24",
    "pytest-timeout>=2.3,<2.4",
    "testcontainers[postgres,mysql]>=4.13.3,<4.14",
    "aiosmtpd>=1.4.6,<1.5",
    "ruff>=0.15.18,<0.16",
    "ty>=0.0.50,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI deps)
    "B904",  # raise from inside except (noisy in legacy code)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]
python-version = "3.12"
