[project]
name = "bagofwords"
version = "0.1.0"
description = "Bag of Words — AI data tool backend"
authors = []
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.138.0,<0.139",
    "uvicorn[standard]>=0.31.1,<0.32",
    "starlette>=1.3.1,<1.4",
    "pydantic>=2.13.4,<2.14",
    "pydantic-settings>=2.14.2,<2.15",
    "python-multipart>=0.0.32,<0.1",
    "email-validator>=2.3.0,<2.4",
    "jinja2>=3.1.6,<3.2",
    "fastapi-users[sqlalchemy]>=15.0.5,<15.1",
    "argon2-cffi>=23.1.0,<23.2",
    "bcrypt>=4.3.0,<4.4",
    "pwdlib[argon2]>=0.3.0,<0.4",
    "pyjwt>=2.13.0,<2.14",
    "httpx-oauth>=0.16.1,<0.17",
    "cryptography>=49.0.0,<50",
    "sqlalchemy>=2.0.51,<2.1",
    "alembic>=1.18.4,<1.19",
    "asyncpg>=0.29.0,<0.30",
    "psycopg2-binary>=2.9.12,<2.10",
    "aiosqlite>=0.20.0,<0.21",
    "pymysql>=1.2.0,<1.3",
    "httpx>=0.28.1,<0.29",
    "requests>=2.34.2,<2.35",
    "requests-ntlm>=1.3.0,<1.4",
    "requests-oauthlib>=2.0.0,<2.1",
    "curl-cffi>=0.15.0,<0.16",
    "selectolax>=0.4.10,<0.5",
    "anthropic>=0.40.0,<0.41",
    "openai>=1.109.1,<1.110",
    "google-generativeai>=0.8.6,<0.9",
    "google-genai>=1.75.0,<1.76",
    "google-api-python-client>=2.197.0,<2.198",
    "google-auth>=2.55.0,<2.56",
    "mcp>=1.28.0,<1.29",
    "clickhouse-connect>=0.8.18,<0.9",
    "snowflake-connector-python>=4.6.0,<4.7",
    "snowflake-sqlalchemy>=1.10.1,<1.11",
    "google-cloud-bigquery>=3.42.0,<3.43",
    "db-dtypes>=1.4.0,<1.5",
    "boto3>=1.43.33,<1.44",
    "awswrangler>=3.16.1,<3.17",
    "azure-kusto-data>=4.6.3,<4.7",
    "azure-identity>=1.25.3,<1.26",
    "databricks-sql-connector>=4.3.0,<4.4",
    "duckdb>=1.5.4,<1.6",
    "pymongo>=4.17.0,<4.18",
    "pyodbc>=5.3.0,<5.4",
    "oracledb>=3.4.2,<3.5",
    "vertica-python>=1.4.0,<1.5",
    "verticapy>=1.1.1,<1.2",
    "trino>=0.337.0,<0.338",
    "pinotdb>=5.7.0,<5.8",
    "pydruid>=0.6.9,<0.7",
    "teradatasql>=20.0.0.61,<20.1",
    "simple-salesforce>=1.12.9,<1.13",
    "ldap3>=2.9.1,<2.10",
    "lkml>=1.3.7,<1.4",
    "pbixray>=0.5.2,<0.6",
    "pyarrow>=18.1.0,<18.2",
    "pandas>=2.3.3,<2.4",
    "numpy>=1.26.4,<1.27",
    "matplotlib>=3.11.0,<3.12",
    "pillow>=12.3.0,<12.4",
    "openpyxl>=3.1.5,<3.2",
    "xlrd>=2.0.2,<2.1",
    "xlsxwriter>=3.2.9,<3.3",
    "pypdf>=6.14.2,<6.15",
    "pdfminer-six>=20221105,<20230000",
    "python-pptx>=1.0.2,<1.1",
    "pdf2image>=1.17.0,<1.18",
    "lxml>=6.1.1,<6.2",
    "defusedxml>=0.7.1,<0.8",
    "aiofiles>=24.1.0,<24.2",
    "aiosmtplib>=5.0.0,<6",
    "apscheduler>=3.11.2,<3.12",
    "tenacity>=9.1.4,<9.2",
    "python-slugify>=8.0.4,<8.1",
    "python-dotenv>=1.2.2,<1.3",
    "pyyaml>=6.0.3,<6.1",
    "tiktoken>=0.13.0,<0.14",
    "rapidfuzz>=3.14.5,<3.15",
    "partialjson>=0.0.9,<0.1",
    "pathspec>=1.1.1,<1.2",
    "gitpython>=3.1.50,<3.2",
    "ipython>=8.39.0,<8.40",
    "fastapi-mail>=1.6.5,<1.7",
    "posthog>=6.9.3,<6.10",
    "stripe>=11.6.0,<11.7",
    "opentelemetry-api>=1.42.1,<1.43",
    "opentelemetry-sdk>=1.42.1,<1.43",
    "opentelemetry-instrumentation-fastapi>=0.63b1,<0.64",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1,<0.64",
    "opentelemetry-instrumentation-httpx>=0.63b1,<0.64",
    "opentelemetry-instrumentation-logging>=0.63b1,<0.64",
    "opentelemetry-exporter-otlp>=1.42.1,<1.43",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1,<1.43",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1,<1.43",
    "playwright>=1.60.0,<1.61",
    "playwright-stealth>=2.0.3,<2.1",
    "pyspark[connect]>=3.5.8,<3.6",
    "pypdfium2>=5.11.0",
]

[project.optional-dependencies]
# Kerberos constrained delegation (S4U) for per-user SSO to on-prem SQL Server.
# Needs MIT krb5 headers to build (libkrb5-dev + krb5-config on Debian/Ubuntu).
kerberos = [
    "gssapi>=1.8.3,<2",
]
dev = [
    "pytest>=8.4.2,<8.5",
    "pytest-asyncio>=0.23.8,<0.24",
    "pytest-timeout>=2.4.0,<2.5",
    "testcontainers[postgres,mysql]>=4.14.2,<4.15",
    "aiosmtpd>=1.4.6,<1.5",
    "ruff>=0.15.18,<0.16",
    "ty>=0.0.51,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI deps)
    "B904",  # raise from inside except (noisy in legacy code)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]
python-version = "3.12"
